/*
 * This file is part of Bisq.
 *
 * Bisq is free software: you can redistribute it and/or modify it
 * under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or (at
 * your option) any later version.
 *
 * Bisq is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 * FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public
 * License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with Bisq. If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package chat;
option java_package = "bisq.chat.protobuf";
option java_multiple_files = true;
import "common.proto";
import "network.proto";
import "security.proto";
import "offer.proto";
import "user.proto";

enum ChatMessageType {
  TEXT = 0;
  LEAVE = 1;
  TAKE_OFFER = 2;
}

enum ChatChannelNotificationType {
  ALL = 0;
  MENTION = 1;
  NEVER = 2;
}

enum ChatChannelDomain {
  TRADE = 0;
  DISCUSSION = 1;
  EVENTS = 2;
  SUPPORT = 3;
}

message Citation {
  string nym = 1;
  string nickName = 2;
  bytes pubKeyHash = 3;
  string message = 4;
}

message ChatMessage {
  string messageId = 1;
  ChatChannelDomain chatChannelDomain = 2;
  string channelName = 3;
  optional string text = 4;
  string authorId = 5;
  optional Citation citation = 6;
  uint64 date = 7;
  bool wasEdited = 8;
  ChatMessageType chatMessageType = 9;
  network.MetaData metaData = 10;
  oneof message {
    TwoPartyPrivateChatMessage twoPartyPrivateChatMessage = 20;
    CommonPublicChatMessage commonPublicChatMessage = 21;
    PrivateBisqEasyTradeChatMessage privateBisqEasyTradeChatMessage = 22;
    PublicBisqEasyOfferChatMessage publicBisqEasyOfferChatMessage = 23;
  }
}

message ChatChannel {
  ChatChannelDomain chatChannelDomain = 1;
  string channelName = 2;
  ChatChannelNotificationType chatChannelNotificationType = 3;
  repeated string seenChatMessageIds = 4;
  oneof message{
    PrivateTwoPartyChatChannel privateTwoPartyChatChannel = 10;
    CommonPublicChatChannel commonPublicChatChannel = 11;
    PrivateBisqEasyTradeChatChannel privateBisqEasyTradeChatChannel = 12;
    PublicBisqEasyOfferChatChannel publicBisqEasyOfferChatChannel = 13;
  }
}

// Private
message TwoPartyPrivateChatMessage {
  string receiversId = 1;
  user.UserProfile sender = 2;
}
message PrivateTwoPartyChatChannel {
  user.UserIdentity myUserIdentity = 1;
  user.UserProfile peer = 2;
  repeated ChatMessage chatMessages = 3;
}
message PrivateTwoPartyChatChannelStore {
  repeated ChatChannel channels = 1;
}


// Public
message CommonPublicChatMessage {
}

message CommonPublicChatChannel {
  string channelName = 1;
  string description = 2;
  string channelAdminId = 3;
  repeated string channelModeratorIds = 4;
  bool isVisible = 5;
}
message CommonPublicChatChannelStore {
  repeated ChatChannel channels = 1;
}

message ChatChannelSelectionStore {
  optional string selectedChannelId = 1;
}


// Trade
message PrivateBisqEasyTradeChatMessage {
  string receiversId = 1;
  user.UserProfile sender = 2;
  optional user.UserProfile mediator = 3;
  optional BisqEasyOffer bisqEasyOffer = 4;
}

message BisqEasyOffer {
  string id = 1;
  offer.Direction direction = 2;
  common.Market market = 3;
  uint64 baseSideAmount = 4;
  uint64 quoteSideAmount = 5;
  repeated string paymentMethods = 6;
  string makersTradeTerms = 7;
  uint64 requiredTotalReputationScore = 8;
}

message PublicBisqEasyOfferChatMessage {
  optional BisqEasyOffer bisqEasyOffer = 1;
}

message PrivateBisqEasyTradeChatChannel {
  BisqEasyOffer bisqEasyOffer = 1;
  user.UserIdentity myUserIdentity = 2;
  repeated user.UserProfile traders = 3;
  optional user.UserProfile mediator = 4;
  repeated ChatMessage chatMessages = 5;
  bool isInMediation = 6;
}

message PublicBisqEasyOfferChatChannel {
  common.Market market = 1;
}

message PrivateBisqEasyTradeChatChannelStore {
  repeated ChatChannel channels = 1;
}

message PublicBisqEasyOfferChatChannelStore {
  repeated ChatChannel channels = 1;
  repeated string visibleChannelNames = 2;
}



